lance/_build/parser.output
   0  $accept : %entry% $end

   1  const : NUM
   2        | TRUE
   3        | FALSE
   4        | NIL COLON typ

   5  prim1 : ADD1
   6        | SUB1
   7        | NOT
   8        | PRINT
   9        | ISBOOL
  10        | ISNUM
  11        | ISTUPLE
  12        | PRINTSTACK

  13  bindings : bind EQUAL expr
  14           | bind EQUAL expr COMMA bindings

  15  namebindings : namebind EQUAL expr
  16               | namebind EQUAL expr COMMA namebindings

  17  expr : LET bindings IN expr
  18       | LET REC namebindings IN expr
  19       | IF expr COLON expr ELSECOLON expr
  20       | BEGIN expr END
  21       | binop_expr SEMI expr
  22       | binop_expr

  23  exprs : expr
  24        | expr COMMA exprs

  25  tuple_expr : LPARENNOSPACE RPAREN
  26             | LPARENSPACE RPAREN
  27             | LPARENNOSPACE expr COMMA RPAREN
  28             | LPARENSPACE expr COMMA RPAREN
  29             | LPARENNOSPACE expr COMMA exprs RPAREN
  30             | LPARENSPACE expr COMMA exprs RPAREN

  31  tuple_get : id LBRACK NUM OF NUM RBRACK
  32            | tuple_get LBRACK NUM OF NUM RBRACK

  33  tuple_set : id LBRACK NUM OF NUM COLONEQ expr RBRACK
  34            | tuple_get LBRACK NUM OF NUM COLONEQ expr RBRACK
  35            | tuple_set LBRACK NUM OF NUM COLONEQ expr RBRACK

  36  simple_expr : prim1 LPARENNOSPACE expr RPAREN
  37              | tuple_expr
  38              | tuple_get
  39              | tuple_set
  40              | LPARENSPACE expr RPAREN
  41              | LPARENNOSPACE expr RPAREN
  42              | LPARENNOSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  43              | LPARENNOSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  44              | LPARENNOSPACE LAMBDA COLON expr RPAREN
  45              | LPARENSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  46              | LPARENSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  47              | LPARENSPACE LAMBDA COLON expr RPAREN
  48              | binop_expr LPARENNOSPACE exprs RPAREN
  49              | binop_expr LPARENNOSPACE RPAREN
  50              | const
  51              | id

  52  id : ID
  53     | LPARENNOSPACE ID COLON typ RPAREN
  54     | LPARENSPACE ID COLON typ RPAREN

  55  binop_expr : binop_expr PLUS binop_expr
  56             | binop_expr MINUS binop_expr
  57             | binop_expr TIMES binop_expr
  58             | binop_expr AND binop_expr
  59             | binop_expr OR binop_expr
  60             | binop_expr GREATER binop_expr
  61             | binop_expr GREATEREQ binop_expr
  62             | binop_expr LESSSPACE binop_expr
  63             | binop_expr LESSNOSPACE binop_expr
  64             | binop_expr LESSEQ binop_expr
  65             | binop_expr EQEQ binop_expr
  66             | simple_expr

  67  decl : DEF ID LPARENNOSPACE RPAREN COLON expr
  68       | DEF ID LPARENNOSPACE RPAREN THINARROW typ COLON expr
  69       | DEF ID LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr
  70       | DEF ID LPARENNOSPACE binds RPAREN COLON expr
  71       | DEF ID LPARENNOSPACE binds RPAREN THINARROW typ COLON expr

  72  tyids :
  73        | TYID
  74        | TYID COMMA tyids

  75  tyid : TYID

  76  binds : bind
  77        | bind COMMA binds

  78  bind : namebind
  79       | LPARENNOSPACE binds RPAREN
  80       | LPARENSPACE binds RPAREN

  81  namebinds : namebind
  82            | namebind COMMA namebinds

  83  namebind : ID
  84           | ID COLON typ

  85  typ : ID
  86      | tyid
  87      | arrowtyp
  88      | tupletyp

  89  arrowtyp : LPARENNOSPACE typs THINARROW typ RPAREN
  90           | LPARENSPACE typs THINARROW typ RPAREN

  91  tupletyp : LPARENNOSPACE startyps RPAREN
  92           | LPARENSPACE startyps RPAREN

  93  typs : typ
  94       | typ COMMA typs

  95  startyps : typ
  96           | typ TIMES startyps

  97  declgroup : decl
  98            | decl ANDDEF declgroup

  99  decls :
 100        | declgroup decls

 101  tydecl : TYPE ID EQUAL LPARENNOSPACE startyps RPAREN
 102         | TYPE ID EQUAL LPARENSPACE startyps RPAREN

 103  tydecls :
 104          | tydecl tydecls

 105  program : tydecls decls expr COLON typ EOF
 106          | tydecls decls expr EOF

 107  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (107)
	tydecls : .  (103)

	TYPE  shift 3
	NUM  reduce 103
	ID  reduce 103
	DEF  reduce 103
	ADD1  reduce 103
	SUB1  reduce 103
	LPARENSPACE  reduce 103
	LPARENNOSPACE  reduce 103
	LET  reduce 103
	IF  reduce 103
	PRINT  reduce 103
	PRINTSTACK  reduce 103
	TRUE  reduce 103
	FALSE  reduce 103
	ISBOOL  reduce 103
	ISNUM  reduce 103
	ISTUPLE  reduce 103
	NOT  reduce 103
	NIL  reduce 103
	BEGIN  reduce 103

	program  goto 4
	tydecl  goto 5
	tydecls  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	tydecl : TYPE . ID EQUAL LPARENNOSPACE startyps RPAREN  (101)
	tydecl : TYPE . ID EQUAL LPARENSPACE startyps RPAREN  (102)

	ID  shift 7
	.  error


state 4
	%entry% : '\001' program .  (107)

	.  reduce 107


state 5
	tydecls : tydecl . tydecls  (104)
	tydecls : .  (103)

	TYPE  shift 3
	NUM  reduce 103
	ID  reduce 103
	DEF  reduce 103
	ADD1  reduce 103
	SUB1  reduce 103
	LPARENSPACE  reduce 103
	LPARENNOSPACE  reduce 103
	LET  reduce 103
	IF  reduce 103
	PRINT  reduce 103
	PRINTSTACK  reduce 103
	TRUE  reduce 103
	FALSE  reduce 103
	ISBOOL  reduce 103
	ISNUM  reduce 103
	ISTUPLE  reduce 103
	NOT  reduce 103
	NIL  reduce 103
	BEGIN  reduce 103

	tydecl  goto 5
	tydecls  goto 8


state 6
	program : tydecls . decls expr COLON typ EOF  (105)
	program : tydecls . decls expr EOF  (106)
	decls : .  (99)

	DEF  shift 9
	NUM  reduce 99
	ID  reduce 99
	ADD1  reduce 99
	SUB1  reduce 99
	LPARENSPACE  reduce 99
	LPARENNOSPACE  reduce 99
	LET  reduce 99
	IF  reduce 99
	PRINT  reduce 99
	PRINTSTACK  reduce 99
	TRUE  reduce 99
	FALSE  reduce 99
	ISBOOL  reduce 99
	ISNUM  reduce 99
	ISTUPLE  reduce 99
	NOT  reduce 99
	NIL  reduce 99
	BEGIN  reduce 99

	decl  goto 10
	declgroup  goto 11
	decls  goto 12


state 7
	tydecl : TYPE ID . EQUAL LPARENNOSPACE startyps RPAREN  (101)
	tydecl : TYPE ID . EQUAL LPARENSPACE startyps RPAREN  (102)

	EQUAL  shift 13
	.  error


state 8
	tydecls : tydecl tydecls .  (104)

	.  reduce 104


state 9
	decl : DEF . ID LPARENNOSPACE RPAREN COLON expr  (67)
	decl : DEF . ID LPARENNOSPACE RPAREN THINARROW typ COLON expr  (68)
	decl : DEF . ID LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (69)
	decl : DEF . ID LPARENNOSPACE binds RPAREN COLON expr  (70)
	decl : DEF . ID LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (71)

	ID  shift 14
	.  error


state 10
	declgroup : decl .  (97)
	declgroup : decl . ANDDEF declgroup  (98)

	ANDDEF  shift 15
	NUM  reduce 97
	ID  reduce 97
	DEF  reduce 97
	ADD1  reduce 97
	SUB1  reduce 97
	LPARENSPACE  reduce 97
	LPARENNOSPACE  reduce 97
	LET  reduce 97
	IF  reduce 97
	PRINT  reduce 97
	PRINTSTACK  reduce 97
	TRUE  reduce 97
	FALSE  reduce 97
	ISBOOL  reduce 97
	ISNUM  reduce 97
	ISTUPLE  reduce 97
	NOT  reduce 97
	NIL  reduce 97
	BEGIN  reduce 97


state 11
	decls : declgroup . decls  (100)
	decls : .  (99)

	DEF  shift 9
	NUM  reduce 99
	ID  reduce 99
	ADD1  reduce 99
	SUB1  reduce 99
	LPARENSPACE  reduce 99
	LPARENNOSPACE  reduce 99
	LET  reduce 99
	IF  reduce 99
	PRINT  reduce 99
	PRINTSTACK  reduce 99
	TRUE  reduce 99
	FALSE  reduce 99
	ISBOOL  reduce 99
	ISNUM  reduce 99
	ISTUPLE  reduce 99
	NOT  reduce 99
	NIL  reduce 99
	BEGIN  reduce 99

	decl  goto 10
	declgroup  goto 11
	decls  goto 16


state 12
	program : tydecls decls . expr COLON typ EOF  (105)
	program : tydecls decls . expr EOF  (106)

	NUM  shift 17
	ID  shift 18
	ADD1  shift 19
	SUB1  shift 20
	LPARENSPACE  shift 21
	LPARENNOSPACE  shift 22
	LET  shift 23
	IF  shift 24
	PRINT  shift 25
	PRINTSTACK  shift 26
	TRUE  shift 27
	FALSE  shift 28
	ISBOOL  shift 29
	ISNUM  shift 30
	ISTUPLE  shift 31
	NOT  shift 32
	NIL  shift 33
	BEGIN  shift 34
	.  error

	const  goto 35
	prim1  goto 36
	expr  goto 37
	binop_expr  goto 38
	tuple_expr  goto 39
	tuple_get  goto 40
	id  goto 41
	tuple_set  goto 42
	simple_expr  goto 43


state 13
	tydecl : TYPE ID EQUAL . LPARENNOSPACE startyps RPAREN  (101)
	tydecl : TYPE ID EQUAL . LPARENSPACE startyps RPAREN  (102)

	LPARENSPACE  shift 44
	LPARENNOSPACE  shift 45
	.  error


state 14
	decl : DEF ID . LPARENNOSPACE RPAREN COLON expr  (67)
	decl : DEF ID . LPARENNOSPACE RPAREN THINARROW typ COLON expr  (68)
	decl : DEF ID . LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (69)
	decl : DEF ID . LPARENNOSPACE binds RPAREN COLON expr  (70)
	decl : DEF ID . LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (71)

	LPARENNOSPACE  shift 46
	LESSNOSPACE  shift 47
	.  error


state 15
	declgroup : decl ANDDEF . declgroup  (98)

	DEF  shift 9
	.  error

	decl  goto 10
	declgroup  goto 48


state 16
	decls : declgroup decls .  (100)

	.  reduce 100


state 17
	const : NUM .  (1)

	.  reduce 1


state 18
	id : ID .  (52)

	.  reduce 52


state 19
	prim1 : ADD1 .  (5)

	.  reduce 5


state 20
	prim1 : SUB1 .  (6)

	.  reduce 6


state 21
	tuple_expr : LPARENSPACE . RPAREN  (26)
	tuple_expr : LPARENSPACE . expr COMMA RPAREN  (28)
	tuple_expr : LPARENSPACE . expr COMMA exprs RPAREN  (30)
	simple_expr : LPARENSPACE . expr RPAREN  (40)
	simple_expr : LPARENSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (45)
	simple_expr : LPARENSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (46)
	simple_expr : LPARENSPACE . LAMBDA COLON expr RPAREN  (47)
	id : LPARENSPACE . ID COLON typ RPAREN  (54)

	NUM  shift 17
	ID  shift 49
	ADD1  shift 19
	SUB1  shift 20
	LPARENSPACE  shift 21
	LPARENNOSPACE  shift 22
	RPAREN  shift 50
	LET  shift 23
	IF  shift 24
	PRINT  shift 25
	PRINTSTACK  shift 26
	TRUE  shift 27
	FALSE  shift 28
	ISBOOL  shift 29
	ISNUM  shift 30
	ISTUPLE  shift 31
	NOT  shift 32
	NIL  shift 33
	LAMBDA  shift 51
	BEGIN  shift 34
	.  error

	const  goto 35
	prim1  goto 36
	expr  goto 52
	binop_expr  goto 38
	tuple_expr  goto 39
	tuple_get  goto 40
	id  goto 41
	tuple_set  goto 42
	simple_expr  goto 43


state 22
	tuple_expr : LPARENNOSPACE . RPAREN  (25)
	tuple_expr : LPARENNOSPACE . expr COMMA RPAREN  (27)
	tuple_expr : LPARENNOSPACE . expr COMMA exprs RPAREN  (29)
	simple_expr : LPARENNOSPACE . expr RPAREN  (41)
	simple_expr : LPARENNOSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (42)
	simple_expr : LPARENNOSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (43)
	simple_expr : LPARENNOSPACE . LAMBDA COLON expr RPAREN  (44)
	id : LPARENNOSPACE . ID COLON typ RPAREN  (53)

	NUM  shift 17
	ID  shift 53
	ADD1  shift 19
	SUB1  shift 20
	LPARENSPACE  shift 21
	LPARENNOSPACE  shift 22
	RPAREN  shift 54
	LET  shift 23
	IF  shift 24
	PRINT  shift 25
	PRINTSTACK  shift 26
	TRUE  shift 27
	FALSE  shift 28
	ISBOOL  shift 29
	ISNUM  shift 30
	ISTUPLE  shift 31
	NOT  shift 32
	NIL  shift 33
	LAMBDA  shift 55
	BEGIN  shift 34
	.  error

	const  goto 35
	prim1  goto 36
	expr  goto 56
	binop_expr  goto 38
	tuple_expr  goto 39
	tuple_get  goto 40
	id  goto 41
	tuple_set  goto 42
	simple_expr  goto 43


state 23
	expr : LET . bindings IN expr  (17)
	expr : LET . REC namebindings IN expr  (18)

	ID  shift 57
	LPARENSPACE  shift 58
	LPARENNOSPACE  shift 59
	REC  shift 60
	.  error

	bindings  goto 61
	bind  goto 62
	namebind  goto 63


state 24
	expr : IF . expr COLON expr ELSECOLON expr  (19)

	NUM  shift 17
	ID  shift 18
	ADD1  shift 19
	SUB1  shift 20
	LPARENSPACE  shift 21
	LPARENNOSPACE  shift 22
	LET  shift 23
	IF  shift 24
	PRINT  shift 25
	PRINTSTACK  shift 26
	TRUE  shift 27
	FALSE  shift 28
	ISBOOL  shift 29
	ISNUM  shift 30
	ISTUPLE  shift 31
	NOT  shift 32
	NIL  shift 33
	BEGIN  shift 34
	.  error

	const  goto 35
	prim1  goto 36
	expr  goto 64
	binop_expr  goto 38
	tuple_expr  goto 39
	tuple_get  goto 40
	id  goto 41
	tuple_set  goto 42
	simple_expr  goto 43


state 25
	prim1 : PRINT .  (8)

	.  reduce 8


state 26
	prim1 : PRINTSTACK .  (12)

	.  reduce 12


state 27
	const : TRUE .  (2)

	.  reduce 2


state 28
	const : FALSE .  (3)

	.  reduce 3


state 29
	prim1 : ISBOOL .  (9)

	.  reduce 9


state 30
	prim1 : ISNUM .  (10)

	.  reduce 10


state 31
	prim1 : ISTUPLE .  (11)

	.  reduce 11


state 32
	prim1 : NOT .  (7)

	.  reduce 7


state 33
	const : NIL . COLON typ  (4)

	COLON  shift 65
	.  error


state 34
	expr : BEGIN . expr END  (20)

	NUM  shift 17
	ID  shift 18
	ADD1  shift 19
	SUB1  shift 20
	LPARENSPACE  shift 21
	LPARENNOSPACE  shift 22
	LET  shift 23
	IF  shift 24
	PRINT  shift 25
	PRINTSTACK  shift 26
	TRUE  shift 27
	FALSE  shift 28
	ISBOOL  shift 29
	ISNUM  shift 30
	ISTUPLE  shift 31
	NOT  shift 32
	NIL  shift 33
	BEGIN  shift 34
	.  error

	const  goto 35
	prim1  goto 36
	expr  goto 66
	binop_expr  goto 38
	tuple_expr  goto 39
	tuple_get  goto 40
	id  goto 41
	tuple_set  goto 42
	simple_expr  goto 43


state 35
	simple_expr : const .  (50)

	.  reduce 50


state 36
	simple_expr : prim1 . LPARENNOSPACE expr RPAREN  (36)

	LPARENNOSPACE  shift 67
	.  error


state 37
	program : tydecls decls expr . COLON typ EOF  (105)
	program : tydecls decls expr . EOF  (106)

	COLON  shift 68
	EOF  shift 69
	.  error


state 38
	expr : binop_expr . SEMI expr  (21)
	expr : binop_expr .  (22)
	simple_expr : binop_expr . LPARENNOSPACE exprs RPAREN  (48)
	simple_expr : binop_expr . LPARENNOSPACE RPAREN  (49)
	binop_expr : binop_expr . PLUS binop_expr  (55)
	binop_expr : binop_expr . MINUS binop_expr  (56)
	binop_expr : binop_expr . TIMES binop_expr  (57)
	binop_expr : binop_expr . AND binop_expr  (58)
	binop_expr : binop_expr . OR binop_expr  (59)
	binop_expr : binop_expr . GREATER binop_expr  (60)
	binop_expr : binop_expr . GREATEREQ binop_expr  (61)
	binop_expr : binop_expr . LESSSPACE binop_expr  (62)
	binop_expr : binop_expr . LESSNOSPACE binop_expr  (63)
	binop_expr : binop_expr . LESSEQ binop_expr  (64)
	binop_expr : binop_expr . EQEQ binop_expr  (65)
